--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ cloudinary.secret=${CLOUDINARY_SECRET}
 jwt.secret=${JWT_SECRET}
 #PREZZOTICKETBASE
 prezzo_base=5
+#AUTH TMDB
+auth_tmdb=${TMDB_AUTH}
+#KEY NEWSAPI
+news_api_key=${NEWS_API_KEY}
