--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ prezzo_base=5
 auth_tmdb=${TMDB_AUTH}
 #KEY NEWSAPI
 news_api_key=${NEWS_API_KEY}
+#KEYSTRIPE
+stripe.secret.key=${PRIVATE_KEY_STRIPE}
