--- a/pom.xml
+++ b/pom.xml
@@ -154,8 +154,12 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <outputDirectory>${project.basedir}/jar</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
