--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <outputDirectory>${project.basedir}/jar</outputDirectory>
+                    <outputDirectory>${project.basedir}/custom_output_folder</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
