--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=${SERVER_PORT}
 spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.url=${POSTGRES_URL}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.drive=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #Cloudinary
