--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ auth_tmdb=${TMDB_AUTH}
 news_api_key=${NEWS_API_KEY}
 #KEYSTRIPE
 stripe.secret.key=${PRIVATE_KEY_STRIPE}
+#KEYWEBHOOK
+webhook.secret.key=${PRIVATE_KEY_WEBHOOK}
