--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.config.import=file:env.properties
+spring.config.import=file:env.properties
 spring.application.name=GalaxyNema
 #DB
 server.port=${SERVER_PORT}
@@ -7,7 +7,6 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Cloudinary
 cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.key=${CLOUDINARY_KEY}
